ingress/ingress.txt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetets.io/auth-url: "https://oauth.pacman-$pacman.$host"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.pacman-$pacman.$host"
    ingress.kubernetes.io/whitelist-source-range: $ip_whitelist_range
  name: ingress-$pacman
  namespace: $pacman
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-$pacman.$host
    http:
      paths:
      - backend:
          service:
            name: pacman
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ingress-$pacman.$host    
    secretName: $pacman-ingress-tls
